feat: add pre-commit hooks for terrascan

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,3 +6,6 @@ repos:
         args:
           - --args=--config=.terraform-docs.yml
       - id: terraform_checkov
+      - id: terrascan
+        args:
+          - --args=--non-recursive
