feat: add terraform_validate pre-commit hook and lock google provider version

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,3 +10,6 @@ repos:
         args:
           - --args=--non-recursive
       - id: terraform_tflint
+      - id: terraform_validate
+        args:
+          - --init-args=-backend=false
